[package]
name = "dpcore"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dpmypaint = { path = "../dpmypaint" }
base64 = "0.13.0"
bytemuck = "1.12"
tracing = "0.1.36"
num_enum = "0.5.7"
bitvec = "1.0.1"
inflate = "0.4.5"
deflate = "1.0.0"
lazy_static = "1.4.0"

[dev-dependencies]
itertools = "0.10.3"
image = { version = "0.24.3", default-features = false, features = ["png"] }
criterion = "0.3.6"

[[bench]]
name = "rasterops"
harness = false

[[bench]]
name = "brushdabs"
harness = false
