[package]
name = "dpcore"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dpmypaint = { path = "../dpmypaint" }
base64 = "0.13"
bytemuck = "1.12"
tracing = "0.1"
num_enum = "0.5"
bitvec = "1.0"
inflate = "0.4"
deflate = "1.0"
lazy_static = "1.4"

[dev-dependencies]
itertools = "0.10"
image = { version = "0.24", default-features = false, features = ["png"] }
criterion = "0.3"

[[bench]]
name = "rasterops"
harness = false

[[bench]]
name = "brushdabs"
harness = false
