[package]
name = "dpimpex"
version = "0.1.0"
publish = false
edition = "2021"
license = "GPLv3"

[dependencies]
bytemuck = "1.12"
dpcore = { path = "../dpcore" }
xml-rs = "0.8.4"
tracing = "0.1.36"
serde_json = "1.0.83"
byteorder = "1.4.3"

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["png", "jpeg", "gif"]

[dependencies.zip]
version = "0.6.2"
default-features = false
features = ["deflate"]
