[package]
name = "dpimpex"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = "1.12"
dpcore = { path = "../dpcore" }
xml-rs = "0.8"
tracing = "0.1"
serde_json = "1.0"
byteorder = "1.4"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "gif"]

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate"]
