[package]
name = "drawpile-cli"
version = "2.2.0"
edition = "2021"

[dependencies]
dpcore = { path = "../dpcore" }
dpimpex = { path = "../dpimpex" }
clap = { version = "3.2.16", features=["derive"] }
tracing-subscriber = "0.3.15"
tracing = "0.1.36"

[dependencies.image]
version = "0.24.3"
default-features = false
