find_package(${QT_PACKAGE_NAME} ${DP_MIN_QT_VERSION_GUI} REQUIRED COMPONENTS Gui Sql)
find_package(${QT_PACKAGE_NAME} ${DP_MIN_QT_VERSION_GUI} QUIET COMPONENTS LinguistTools)

add_library(dpclient STATIC
	brushes/brush.cpp
	brushes/brush.h
	brushes/brushpresetmodel.cpp
	brushes/brushpresetmodel.h
	canvas/acl.cpp
	canvas/acl.h
	canvas/blendmodes.cpp
	canvas/blendmodes.h
	canvas/canvasmodel.cpp
	canvas/canvasmodel.h
	canvas/documentmetadata.cpp
	canvas/documentmetadata.h
	canvas/features.h
	canvas/indexbuilderrunnable.cpp
	canvas/indexbuilderrunnable.h
	canvas/inputpresetmodel.cpp
	canvas/inputpresetmodel.h
	canvas/layerlist.cpp
	canvas/layerlist.h
	canvas/paintengine.cpp
	canvas/paintengine.h
	canvas/point.h
	canvas/pressure.h
	canvas/selection.cpp
	canvas/selection.h
	canvas/timelinemodel.cpp
	canvas/timelinemodel.h
	canvas/userlist.cpp
	canvas/userlist.h
	export/animationsaverrunnable.cpp
	export/animationsaverrunnable.h
	export/canvassaverrunnable.cpp
	export/canvassaverrunnable.h
	export/ffmpegexporter.cpp
	export/ffmpegexporter.h
	export/imageseriesexporter.cpp
	export/imageseriesexporter.h
	export/videoexporter.cpp
	export/videoexporter.h
	net/announcementlist.cpp
	net/announcementlist.h
	net/banlistmodel.cpp
	net/banlistmodel.h
	net/client.cpp
	net/client.h
	net/envelope.h
	net/envelopebuilder.cpp
	net/envelopebuilder.h
	net/login.cpp
	net/login.h
	net/loginsessions.cpp
	net/loginsessions.h
	net/messagequeue.cpp
	net/messagequeue.h
	net/server.cpp
	net/server.h
	net/servercmd.cpp
	net/servercmd.h
	net/sessionlistingmodel.cpp
	net/sessionlistingmodel.h
	net/tcpserver.cpp
	net/tcpserver.h
	parentalcontrols/parentalcontrols.cpp
	parentalcontrols/parentalcontrols.h
	tools/annotation.cpp
	tools/annotation.h
	tools/beziertool.cpp
	tools/beziertool.h
	tools/colorpicker.cpp
	tools/colorpicker.h
	tools/floodfill.cpp
	tools/floodfill.h
	tools/freehand.cpp
	tools/freehand.h
	tools/inspector.cpp
	tools/inspector.h
	tools/laser.cpp
	tools/laser.h
	tools/selection.cpp
	tools/selection.h
	tools/shapetools.cpp
	tools/shapetools.h
	tools/strokesmoother.cpp
	tools/strokesmoother.h
	tools/tool.h
	tools/toolcontroller.cpp
	tools/toolcontroller.h
	tools/toolproperties.cpp
	tools/toolproperties.h
	tools/utils.cpp
	tools/utils.h
	tools/zoom.cpp
	tools/zoom.h
	utils/avatarlistmodel.cpp
	utils/avatarlistmodel.h
	utils/changeflags.h
	utils/colorscheme.cpp
	utils/colorscheme.h
	utils/customshortcutmodel.cpp
	utils/customshortcutmodel.h
	utils/funstuff.cpp
	utils/funstuff.h
	utils/html.cpp
	utils/html.h
	utils/icon.cpp
	utils/icon.h
	utils/identicon.cpp
	utils/identicon.h
	utils/images.cpp
	utils/images.h
	utils/kis_cubic_curve.cpp
	utils/kis_cubic_curve.h
	utils/listservermodel.cpp
	utils/listservermodel.h
	utils/logging.cpp
	utils/logging.h
	utils/newversion.cpp
	utils/newversion.h
	utils/sessionfilterproxymodel.cpp
	utils/sessionfilterproxymodel.h
	utils/sessionidvalidator.cpp
	utils/sessionidvalidator.h
	utils/shortcutdetector.cpp
	utils/shortcutdetector.h
	utils/usernamevalidator.cpp
	utils/usernamevalidator.h
	document.cpp
	document.h
)

# https://gitlab.kitware.com/cmake/cmake/-/issues/19813
if(WIN32)
	target_sources(dpclient PRIVATE
		parentalcontrols/parentalcontrols_win.cpp
	)
else()
	target_sources(dpclient PRIVATE
		parentalcontrols/parentalcontrols_dummy.cpp
	)
endif()

target_link_libraries(dpclient
	dpshared
	${QT_PACKAGE_NAME}::Gui
	${QT_PACKAGE_NAME}::Network
	${QT_PACKAGE_NAME}::Sql
	rustpile
	libmypaint
)

if(${QT_PACKAGE_NAME}LinguistTools_FOUND)
	add_subdirectory(i18n)
endif()
add_feature_info("Client translations" ${QT_PACKAGE_NAME}LinguistTools_FOUND "")

if(TESTS)
	add_subdirectory(tests)
endif()

target_auto_source_group(dpclient)
